# Proyecto3D

./: CMakeLists.txt  display.h  main.c  matrix.c  mesh.c  vector.c
Tareas/tareas/: circulo.html  elipse.html  poligono.html
Tareas/tareas/css/: style.css
Tareas/tareas/js/: bresenham.js  polygon_filling.js
